--- a/public/assets/css/hrportal.css
+++ b/public/assets/css/hrportal.css
@@ -547,7 +547,7 @@ footer {
     margin-top: 0.5rem;
 }
 
-.stat-number.total {
+.stat-number.all {
     color: #3498db;
 }
 .stat-number.approved {
@@ -662,7 +662,7 @@ footer {
    TASK PAGE
 ============================= */
 
-.filter-card[data-status="total"] i {
+.filter-card[data-status="all"] i {
     color: var(--primary-color);
 }
 .filter-card[data-status="to-do"] i {
@@ -688,7 +688,7 @@ footer {
     margin-top: 0.5rem;
 }
 
-.stat-number.total {
+.stat-number.all {
     color: #3498db;
 }
 .stat-number.to-do {
@@ -785,8 +785,8 @@ footer {
    PROJECT PAGE
 ============================= */
 
-.filter-card[data-status="total"] i {
-    color: var(--primary-color);
+.filter-card[data-status="all"] i {
+    color: var(--secondary-color);
 }
 .filter-card[data-status="not-started"] i {
     color: var(--danger-color);
@@ -795,14 +795,14 @@ footer {
     color: var(--warning-color);
 }
 .filter-card[data-status="on-hold"] i {
-    color: var(--warning-color);
+    color: var(--primary-color);
 }
 .filter-card[data-status="completed"] i {
     color: var(--success-color);
 }
 
-.stat-number.total {
-    color: #3498db;
+.stat-number.all {
+    color: #0056b3;
 }
 .stat-number.not-started {
     color: #dc3545;
@@ -811,7 +811,7 @@ footer {
     color: #ffc107;
 }
 .stat-number.on-hold {
-    color: #ffc107;
+    color: #3498db;
 }
 .stat-number.completed {
     color: #28a745;
@@ -839,7 +839,7 @@ footer {
 }
 
 .project-item[data-status="on-hold"] {
-    border-left-color: var(--warning-color);
+    border-left-color: var(--primary-color);
 }
 
 .project-item[data-status="completed"] {
